[package]
name = "os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
riscv = { version = "0.10" }
buddy_system_allocator = "0.8"
bitflags = "1.3"
xmas-elf = "0.9"
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "4ee80e5" }
easy-fs = { path = "../easy-fs" }

[features]
board_qemu = []

[profile.release]
debug = true
